--- a/package.json
+++ b/package.json
@@ -58,9 +58,11 @@
     "react-toastify": "^11.0.5",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "sweetalert2": "^11.22.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
