admin sidebar and live baseurl

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# REACT_APP_API_URL=https://aibackend.todaystrends.site/admin/v1/
-REACT_APP_API_URL=http://localhost:1111/admin/v1/
+REACT_APP_API_URL=https://aibackend.todaystrends.site/admin/v1/
+# REACT_APP_API_URL=http://localhost:1111/admin/v1/
 REACT_APP_API_KEY=your_api_key_here
 REACT_APP_ENVIRONMENT=development
 PORT=5000
